set OG metadata

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DatArt</title>
+    <meta name="description" content="Art from your Data">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://acharliekelly.me">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="DatArt">
+    <meta property="og:description" content="Art from your Data">
+    <meta property="og:image" content="https://asset.cloudinary.com/cantimaginewhy/42a3fc4936f74741bed35797236aeeed">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="acharliekelly.me">
+    <meta property="twitter:url" content="https://acharliekelly.me">
+    <meta name="twitter:title" content="DatArt">
+    <meta name="twitter:description" content="Art from your Data">
+    <meta name="twitter:image" content="https://asset.cloudinary.com/cantimaginewhy/42a3fc4936f74741bed35797236aeeed">
+
   </head>
   <body>
     <div id="root"></div>
