--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="DatArt">
     <meta property="og:description" content="Art from your Data">
-    <meta property="og:image" content="https://asset.cloudinary.com/cantimaginewhy/42a3fc4936f74741bed35797236aeeed">
+    <meta property="og:image" content="https://res.cloudinary.com/cantimaginewhy/image/upload/v1764102095/icon/og-datart.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://acharliekelly.me">
     <meta name="twitter:title" content="DatArt">
     <meta name="twitter:description" content="Art from your Data">
-    <meta name="twitter:image" content="https://asset.cloudinary.com/cantimaginewhy/42a3fc4936f74741bed35797236aeeed">
+    <meta name="twitter:image" content="https://res.cloudinary.com/cantimaginewhy/image/upload/v1764102095/icon/og-datart.png">
 
   </head>
   <body>
